Attempt to fix z-index of remark user details overlay

--- a/assets/styles.pcss
+++ b/assets/styles.pcss
@@ -86,3 +86,8 @@ html {
 body {
     @apply antialiased dark:bg-gray-900;
 }
+
+div[id*="remark-"] {
+    position: relative;
+    z-index: 1000;
+}
